<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/text_view"
            android:textSize="36sp">

        </TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear">

            </Button>

            <Button
                android:id="@+id/button_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_remove">

            </Button>

            <Button
                android:id="@+id/button_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_percent">

            </Button>

            <Button
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_division">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button7">

            </Button>

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button8">

            </Button>

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button9">

            </Button>

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_multiplication">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4">

            </Button>

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button5">

            </Button>

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button6">

            </Button>

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_minus">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1">

            </Button>

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2">

            </Button>

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button3">

            </Button>

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_plus">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button0">

            </Button>

            <Button
                android:id="@+id/button_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_point">

            </Button>

            <Button
                android:id="@+id/button_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_result">

            </Button>
        </LinearLayout>
        /

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
